typhon-cluster/apps/jellyfin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
  labels:
    pod-security.kubernetes.io/enforce: restricted
