typhon-cluster/apps/jellyfin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
spec:
  parentRefs:
    - name: main
      namespace: gateway
  hostnames:
    - jellyfin.buildwithcaleb.com
  rules:
    - backendRefs:
        - name: jellyfin
          port: 80
